--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -54,3 +54,5 @@ methodology:
 blog:
   lead: Read all the news about Remote France
   readmore: Read More
+  newerposts: Newer Posts
+  olderposts: Older Posts
