--- a/_data/i18n/fr.yml
+++ b/_data/i18n/fr.yml
@@ -54,4 +54,5 @@ methodology:
 blog:
   lead: Lisez toutes les actualités de Remote France
   readmore: Lire la suite
-  
+  newerposts: Articles plus récents
+  olderposts: Articles plus vieux
